# freediag

./: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Dockerfile  build-freediag.sh  build.ninja  cconf.h  cmake_install.cmake  nisprog
scantool/: CTestTestfile.cmake  cmake_install.cmake  diag_config.c  diag_l2.c  diag_os_unix.c
tests/: CTestTestfile.cmake  cmake_install.cmake
